# ar2gems-plugins-examples

./: CMakeLists.txt  add_property_action.cpp  add_property_action.h  library_init.cpp  local_high_values_algo.cpp  local_high_values_algo.h  max_property_action.cpp  max_property_action.h  multiply_property_action.cpp  multiply_property_action.h  pie_chart.cpp
algos/: CMakeLists.txt  add_property_action.cpp  add_property_action.h  distance-from-point.ui  distance_from_point.cpp  distance_from_point.h  library_init.cpp  local_high_values_algo.cpp  local_high_values_algo.h
cmake/modules/: FindAR2GEMS.cmake
eda/: CMakeLists.txt  common.h  library_init.cpp  pie_chart.cpp  pie_chart.h  pie_chart_creator.h
widget-accessors/: CMakeLists.txt  common.h  demo_widget_library_init.cpp  location_widget_accessor.cpp  location_widget_accessor.h
widgets/: CMakeLists.txt  common.h  library_init.cpp  location_widget.cpp  location_widget.h  location_widget_plugin.cpp  location_widget_plugin.h
